[package]
name = "rust_leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]


[[bin]]
name = "01knapsack"
path = "src/0_1_knapsack_problem.rs"
